--- a/app/src/main/res/layout/activity_principal.xml
+++ b/app/src/main/res/layout/activity_principal.xml
@@ -8,11 +8,14 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     tools:openDrawer="start"
+    android:background="#09999A"
     >
 
-    <include
-        layout="@layout/toolbar_ext"
-        />
+    <include layout="@layout/toolbar_ext" />
+    <include layout="@layout/teste"/>
+
+
+
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/nav_view"
         android:layout_width="wrap_content"
@@ -21,6 +24,7 @@
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header_main"
         app:menu="@menu/menu_principal"/>
+
 
 
 </androidx.drawerlayout.widget.DrawerLayout>
