--- a/app/src/main/res/layout/activity_principal_test.xml
+++ b/app/src/main/res/layout/activity_principal_test.xml
@@ -3,24 +3,35 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/drawer_layout2"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:openDrawer="start"
-    >
 
-    <include
-        layout="@layout/toolbar_ext"
-        />
+    tools:openDrawer="start"
+    android:background="#09999A"
+    >
+    <include layout="@layout/toolbar_ext"
+        android:layout_width="match_parent"
+        android:layout_marginLeft="200dp"
+        android:layout_height="match_parent"/>
+    <include layout="@layout/teste" />
+
     <com.google.android.material.navigation.NavigationView
-        android:id="@+id/nav_view2"
+        android:id="@+id/nav_view"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
+        android:visibility="visible"
         app:headerLayout="@layout/nav_header_main"
-        app:menu="@menu/menu_principal"/>
+        app:menu="@menu/menu_principal"
+        />
+
+
+
+
+
 
 
 </androidx.drawerlayout.widget.DrawerLayout>
