--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -13,11 +13,11 @@
         android:orientation="vertical"
         android:gravity="bottom">
 
-    <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+    <de.hdodenhof.circleimageview.CircleImageView
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:paddingTop="@dimen/nav_header_vertical_spacing"
-            app:srcCompat="@mipmap/ic_launcher_round"
+            android:src="@mipmap/ic_launcher_round"
             android:contentDescription="Navigation header"
             android:id="@+id/imageView"/>
 
