--- a/app/src/main/res/layout/toolbar_ext.xml
+++ b/app/src/main/res/layout/toolbar_ext.xml
@@ -6,10 +6,12 @@ xmlns:app="http://schemas.android.com/apk/res-auto"
 xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
+    android:id="@+id/toolbar_ext"
 tools:context=".MainActivity">
 
 <com.google.android.material.appbar.AppBarLayout
-    android:layout_height="wrap_content"
+    android:id="@+id/bar_layout"
+    android:layout_height="60dp"
     android:layout_width="match_parent"
     android:theme="@style/ThemeOverlay.AppCompat.ActionBar">
     <LinearLayout
@@ -35,7 +37,7 @@ tools:context=".MainActivity">
 
 </com.google.android.material.appbar.AppBarLayout>
 
-<include layout="@layout/toolbar_new"/>
+
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
