--- a/app/src/main/res/layout/activity_principal_test.xml
+++ b/app/src/main/res/layout/activity_principal_test.xml
@@ -11,11 +11,11 @@
     tools:openDrawer="start"
     android:background="#09999A"
     >
-    <include layout="@layout/toolbar_ext"
-        android:layout_width="match_parent"
-        android:layout_marginLeft="200dp"
-        android:layout_height="match_parent"/>
-    <include layout="@layout/teste" />
+    <include layout="@layout/toolbar_ext"/>
+
+    <include
+        layout="@layout/teste"
+         />
 
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/nav_view"
