--- a/app/src/main/res/layout/teste.xml
+++ b/app/src/main/res/layout/teste.xml
@@ -1,13 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    >
+<LinearLayout
+    android:id="@+id/LayoutCad"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintHorizontal_bias="0.5"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent">
 
-    <ScrollView
+    <androidx.core.widget.NestedScrollView
         android:layout_marginTop="@dimen/nav_header_height1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:fillViewport="true"
         >
         <GridLayout
             android:layout_width="wrap_content"
@@ -24,56 +37,60 @@
                 android:layout_row="0"
                 android:layout_column="0"
                 android:layout_marginTop="5dp"
-                android:layout_width="175dp"
+                android:layout_width="125dp"
+                android:layout_gravity="center"
                 android:layout_marginRight="2dp"
                 android:clickable="true"
                 android:background="@drawable/icons_rounded"
-                android:src="@drawable/ic_account_circle_24"
-                android:layout_height="175dp"
+                android:src="@mipmap/ic_launcher_maps2_foreground"
+                android:layout_height="125dp"
 
                 />
             <ImageButton
                 android:layout_row="0"
                 android:layout_column="1"
                 android:layout_marginTop="5dp"
+                android:layout_gravity="center"
                 android:layout_marginLeft="2dp"
-                android:layout_width="175dp"
+                android:layout_width="125dp"
                 android:clickable="true"
                 android:background="@drawable/icons_rounded"
-                android:src="@mipmap/ic_launcher_ta_chegando_layer"
-                android:layout_height="175dp"
+                android:src="@mipmap/ic_launcher_history_foreground"
+                android:layout_height="125dp"
 
                 />
 
             <ImageButton
+                android:layout_width="120dp"
+                android:layout_height="125dp"
                 android:layout_row="1"
                 android:layout_column="0"
+                android:layout_gravity="center"
                 android:layout_marginTop="5dp"
                 android:layout_marginRight="2dp"
-                android:layout_width="175dp"
-                android:layout_height="175dp"
                 android:background="@drawable/icons_rounded"
                 android:clickable="true"
-                android:src="@mipmap/ic_launcher_ta_chegando_layer"
-                />
+                android:src="@mipmap/ic_launcher_sms_foreground" />
+
             <ImageButton
+                android:layout_width="125dp"
+                android:layout_height="125dp"
                 android:layout_row="1"
                 android:layout_column="1"
-                android:layout_marginTop="5dp"
-                android:layout_width="175dp"
-                android:layout_height="175dp"
+                android:layout_gravity="center"
                 android:layout_marginLeft="2dp"
+                android:layout_marginTop="5dp"
                 android:background="@drawable/icons_rounded"
                 android:clickable="true"
-                android:src="@mipmap/ic_launcher_ta_chegando_layer"
-                />
+                android:src="@mipmap/ic_launcher_ta_chegando_layer" />
 
             <ImageButton
                 android:layout_row="2"
                 android:layout_column="0"
                 android:layout_marginTop="5dp"
-                android:layout_width="175dp"
-                android:layout_height="175dp"
+                android:layout_gravity="center"
+                android:layout_width="125dp"
+                android:layout_height="125dp"
                 android:layout_marginRight="2dp"
                 android:background="@drawable/icons_rounded"
                 android:clickable="true"
@@ -83,8 +100,9 @@
                 android:layout_row="2"
                 android:layout_column="1"
                 android:layout_marginTop="5dp"
-                android:layout_width="175dp"
-                android:layout_height="175dp"
+                android:layout_gravity="center"
+                android:layout_width="125dp"
+                android:layout_height="125dp"
                 android:layout_marginLeft="2dp"
                 android:background="@drawable/icons_rounded"
                 android:clickable="true"
@@ -97,6 +115,7 @@
 
 
         </GridLayout>
-    </ScrollView>
+    </androidx.core.widget.NestedScrollView>
+</LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
