ajuste para apresentacao de arlindo - commit projectAv2

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -110,7 +110,7 @@
                     android:textColor="@color/white"
                     android:layout_marginBottom="52dp"
                     android:background="@drawable/edittext_rounded"
-                    android:text="ACESSAR"
+                    android:text="@string/acessar"
                     android:textAlignment="center" />
 
                 <TextView
